--- a/package.json
+++ b/package.json
@@ -222,7 +222,9 @@
     "lodash": "4.17.2",
     "minimist": "1.2.0",
     "react": "15.4.1",
+    "react-avatar": "^2.3.0",
     "react-dom": "15.4.1",
+    "react-headroom": "^2.1.3",
     "react-helmet": "3.2.2",
     "react-icons": "^2.2.3",
     "react-intl": "2.1.5",
