--- a/package.json
+++ b/package.json
@@ -222,6 +222,7 @@
     "lodash": "4.17.2",
     "minimist": "1.2.0",
     "react": "15.4.1",
+    "react-audio-player": "^0.3.3",
     "react-dom": "15.4.1",
     "react-helmet": "3.2.2",
     "react-icons": "^2.2.3",
