--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "npm": ">=3",
     "node": ">=5"
   },
-  "author": "Max Stoiber",
+  "author": "TEAM E",
   "license": "MIT",
   "scripts": {
     "analyze:clean": "rimraf stats.json",
