--- a/package.json
+++ b/package.json
@@ -210,6 +210,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.20.0",
+    "bootstrap": "^3.3.7",
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
@@ -221,7 +222,8 @@
     "ip": "1.1.4",
     "lodash": "4.17.2",
     "minimist": "1.2.0",
-    "react": "15.4.1",
+    "react": "^15.4.2",
+    "react-data-grid": "^2.0.19",
     "react-dom": "15.4.1",
     "react-helmet": "3.2.2",
     "react-icons": "^2.2.3",
