Connected with register endpoint

--- a/package.json
+++ b/package.json
@@ -242,6 +242,8 @@
     "reselect": "2.5.4",
     "sanitize.css": "4.1.0",
     "styled-components": "1.1.2",
+    "superagent": "^3.5.2",
+    "superagent-promise": "^1.1.0",
     "warning": "3.0.0",
     "whatwg-fetch": "2.0.1"
   },
