--- a/package.json
+++ b/package.json
@@ -231,6 +231,7 @@
     "react-helmet": "3.2.2",
     "react-icons": "^2.2.3",
     "react-intl": "2.1.5",
+    "react-motion": "^0.4.7",
     "react-redux": "4.4.6",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.6",
